# Youtube_and_Video_Processor

./: .gitignore  README.MD  README.md  __main__.py  configuration.py  dev.requirements.txt  ffmpeg_tools.py  main.py  media.py  pyproject.toml  requirements.txt  run_tests.py  test_yt_dler.py  video_job_gui.py  video_process_config.ini  youtube_dl_gui.py
src/video_processor/: __init__.py  app.py  configuration.py  ffmpeg_tools.py  media.py  video_job_gui.py
tests/: test_yt_dler.py  test_yt_dler.py.bak
