[project]
name = "youtube_and_video_processor"
version = "0.1.0"
description = "Just another youtube downloader - with GUI input of jobs, async processing of video/audio/cover downloading and production."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"auto-py-to-exe>=2.44.2",
	"coverage>=7.6.4",
	"customtkinter>=5.2.2",
	"jsonpickle>=3.3.0",
	"objexplore>=1.6.3",
	"pytest>=8.3.3",
	"pytubefix>=8.1.1",
]
