[project]
name = "youtube_and_video_processor"
version = "0.1.0"
description = "Just another youtube downloader - with GUI input of jobs, async processing of video/audio/cover downloading and production."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"customtkinter>=5.2.2",
	"jsonpickle>=4.0.1",
	"pytubefix>=8.12.0",
]

