[project]
name = "youtube_and_video_processor"
version = "0.1.0"
description = "Just another youtube downloader - with GUI input of jobs, async processing of video/audio/cover downloading and production."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"customtkinter>=5.2.2",
	"jsonpickle>=4.0.1",
	"pytubefix>=8.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["video_processor"]
# package-dir = { "" = "src" }

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
